# lwc-walkie-talkie

./: .gitmodules  README.md  bob  bob.c  encript.rs  encrypt.c
Code/: bob.c  tempCodeRunnerFile.c
Code/X3DH/: x3dh_test.c
Code/X3DH/ed25519/: alice.c  bob.c  encode.c  server.c  test.c
Code/X3DH/ed25519/src/: ed25519.h  sign.c  verify.c
Code/alice/: .gitignore  CMakeLists.txt  alice  alice.c  nc.exe.stackdump
Code/bob/: CMakeLists.txt  bob.c
Code/bob/tinyJambu/: CMakeLists.txt  encrypt.c
Code/bob_x86/: CMakeLists.txt
Code/esp-uart/: CMakeLists.txt  esp-uart.c
Code/esp-uart-client/: CMakeLists.txt  esp-uart-client.c
Code/esp-uart-server/: CMakeLists.txt  esp-uart.c
Code/include/dac/: CMakeLists.txt
Code/include/dac/src/: dac.c  dac.h  dac.pio
Code/include/espHelper/: .gitignore
Code/include/espHelper/src/: CMakeLists.txt  espHelper.c  espHelper.h
Code/include/mic/: CMakeLists.txt
Code/include/mic/src/: mic.c  mic.h  mic.pio
Code/include/standardEspHelper/: CMakeLists.txt
Code/include/standardEspHelper/src/: stdEspHelper.c  stdEspHelper.h
Code/mic/: CMakeLists.txt  dac.pio  mic.pio  micTest.c
Code/pioTest/: CMakeLists.txt  pioTest.c  test.pio
Code/server/: .gitignore  CMakeLists.txt  sdk.config  server.c
Code/server/myapps/: Make.dep  myapps_main.c
Code/server/server/: Make.defs  Make.dep  server_main.c
Code/tiny_jambu/: install-tools.sh  tinyjambu  tinyjambu.c  tinyjambu2  tinyjambu2.c
