cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
add_compile_options(-Wall -Wextra)
set(PICO_SDK_PATH "${CMAKE_CURRENT_LIST_DIR}../../../../../pico-sdk")
include(pico_sdk_import.cmake)
project(dac C CXX ASM)
pico_sdk_init()
link_libraries(pico_stdlib)
link_libraries(hardware_pio)
add_library(dac src/dac.c)
pico_generate_pio_header(dac ${CMAKE_CURRENT_LIST_DIR}/src/dac.pio)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
