cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(PICO_SDK_PATH "${CMAKE_CURRENT_LIST_DIR}../../../../../pico-sdk")
include(pico_sdk_import.cmake)
project(mic C CXX ASM)
pico_sdk_init()
link_libraries(pico_stdlib)
link_libraries(hardware_pio)
add_library(mic src/mic.c)
pico_generate_pio_header(mic ${CMAKE_CURRENT_LIST_DIR}/src/mic.pio)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)