cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(PICO_SDK_PATH "${CMAKE_CURRENT_LIST_DIR}../../../../../../pico-sdk")
include(pico_sdk_import.cmake)
project(espHelper C CXX ASM)
pico_sdk_init()
# target_link_libraries(espHelper pico_stdlib)
link_libraries(pico_stdlib)
add_library(espHelper espHelper.c)